input section done

--- a/index.html
+++ b/index.html
@@ -29,12 +29,18 @@
         </section>
 
         <!-- EXPENSE SECTION -->
-        <!-- <section class="expense">
+        <section class="expense">
             <input type="text" placeholder="Expense Name">
             <input type="text" placeholder="Amount">
-            <input type="text" placeholder="Category">
+            <select id="category">
+                <option value="" disabled selected>Category</option>
+                <option value="food">Food</option>
+                <option value="transport">Transport</option>
+                <option value="shopping">Shopping</option>
+                <option value="other">Other</option>
+            </select>
             <button>Add</button>
-        </section> -->
+        </section>
 
 
 
