--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </section>
 
         <!-- EXPENSE SECTION -->
+         <h2 id="expense-header">Enter expense details</h2>
         <section class="expense">
             <input type="text" placeholder="Expense Name">
             <input type="text" placeholder="Amount">
