--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section class="header">
             <nav id="nav">
                 <img src="logo.png" alt="logo">
-                <h1>-xpensify</h1>
+                <h1>xpensify</h1>
             </nav>
             <div id="p-div">
                 <p class="expensify-paragraph">
