filter section html updates

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
             <button>Add</button>
         </section>
 
+        <!-- FILTER SECTION -->
+         <div class="dropdown">
+            <button onclick="toggleMenu()">Category</button>
+            <div id="menu">
+                <button>Food</button>
+                <button>Transport</button>
+                <button>Shopping</button>
+                <button>Other</button>
+            </div>
+         </div>
+
 
 
     </div>
