--- a/index.html
+++ b/index.html
@@ -59,8 +59,17 @@
                 <button class="menu">Shopping</button>
                 <button class="menu">Other</button>
             </div>
-
         </div>
+        <!-- EXPENSE LIST SECTION -->
+         <div class="expense-list">
+            <div class="expense-card">
+                <div class="expense-text">Lunch</div>
+                <div class="expense-text">Food</div>
+                <div class="expense-text">Ksh 350</div>
+                <div class="expense-text">Date</div>
+                <button>DELETE</button>
+            </div>
+         </div>
 
 
 
