--- a/index.html
+++ b/index.html
@@ -69,9 +69,46 @@
                 <div class="expense-text">Date</div>
                 <button>DELETE</button>
             </div>
+             <div class="expense-card">
+                <div class="expense-text">Lunch</div>
+                <div class="expense-text">Food</div>
+                <div class="expense-text">Ksh 350</div>
+                <div class="expense-text">Date</div>
+                <button>DELETE</button>
+            </div>
+            <div class="expense-card">
+                <div class="expense-text">Lunch</div>
+                <div class="expense-text">Food</div>
+                <div class="expense-text">Ksh 350</div>
+                <div class="expense-text">Date</div>
+                <button>DELETE</button>
+            </div>
+            <div class="expense-card">
+                <div class="expense-text">Lunch</div>
+                <div class="expense-text">Food</div>
+                <div class="expense-text">Ksh 350</div>
+                <div class="expense-text">Date</div>
+                <button>DELETE</button>
+            </div>
+            <div class="expense-card">
+                <div class="expense-text">Lunch</div>
+                <div class="expense-text">Food</div>
+                <div class="expense-text">Ksh 350</div>
+                <div class="expense-text">Date</div>
+                <button>DELETE</button>
+            </div>
+            <div class="expense-card">
+                <div class="expense-text">Lunch</div>
+                <div class="expense-text">Food</div>
+                <div class="expense-text">Ksh 350</div>
+                <div class="expense-text">Date</div>
+                <button>DELETE</button>
+            </div>
          </div>
 
-
+         <div id="total-div">
+            <h1 id="total">TOTAL : KSH 3,000</h1>
+         </div>
 
     </div>
 
