complete with all features

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <!-- FILTER SECTION -->
         <h2 id="expense-header" style="margin-top: 15px;">Filter your expenses</h2>
         <div id="duration">
-            <button class="btn">Daily</button>
-            <button class="btn">Weekly</button>
-            <button class="btn">Monthly</button>
+            <button class="btn" onclick="dailyFilter()">Daily</button>
+            <button class="btn" onclick="weeklyFilter()">Weekly</button>
+            <button class="btn" onclick="monthlyFilter()">Monthly</button>
         </div>
 
         <div class="dropdown">
