App fully complete

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <h2 id="expense-header">Enter expense details</h2>
         <div id="popup" class="popup"></div>
         <section class="expense">
-            <input type="text" placeholder="Expense Name" id="expense-name">
-            <input type="text" placeholder="Amount" id="amount">
-            <select id="category">
+            <input type="text" placeholder="Expense Name" id="expense-name" autocomplete="off">
+            <input type="text" placeholder="Amount" id="amount" autocomplete="off">
+            <select id="category" autocomplete="off">
                 <option value="" disabled selected>Category</option>
                 <option value="Food">Food</option>
                 <option value="Transport">Transport</option>
