--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="nav-links">
                 <a href="#section1" class="nav-link">Add Expense</a>
                 <a href="#section2" class="nav-link">View Expenses</a>
-                <a href="#section3" class="nav-link">Expense Analytics</a>
+                <a href="#section3" class="nav-link">Analytics</a>
             </div>
             <hr>
 
